--- a/index.html
+++ b/index.html
@@ -8,6 +8,60 @@
    <link rel="stylesheet" href="resources/css/style.css">
 </head>
 <body>
-   
+   <nav class="navbar">
+      <img src="resources/images/ic-logo.svg" alt="logo-colmar" class="logo"/>
+      <h1>COLMAR</h1>    
+      <ul>
+         <li>On campus</li>
+         <li>Online</li>
+         <li>or companies</li>
+         <li>Sign in</li>
+      </ul>
+   </nav>
+<section class="section-1">
+   <img src="resources/images/banner.jpg" alt="girl is reading a book"/>
+   <h1>Learn something new everyday</h1>
+   <p>Knowledge is the key</p> 
+   <a class="btn" href="#">Start Here</a>
+</section>
+<section class="section-2">
+   <div class="content-left">
+      <img src="/resources/images/information-main.jpg" alt=""/>
+      <h3>It doesn't hurt to keep practicing</h3>
+      <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+         Ut enim ad minim veniam, 
+         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+      </p>
+      <p>The standard Lorem Ipsum passage, used since the 1500s</p>
+   </div>
+   <div class="content-right">
+      <div>
+      <img src="/resources/images/information-orientation.jpg" alt=""/>
+      <h4>Orientation date</h4>
+      <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+      <a href="https://">Read more</a>
+      </div>
+      <div>
+      <img src="/resources/images/information-campus.jpg" alt=""/>
+      <h4>Our campus</h4>
+      <p>Find which campus is close by you</p>
+      <a href="https://">Read more</a>
+      </div>
+      <div>
+      <img src="/resources/images/information-guest-lecture.jpg" alt=""/>
+      <h4>Our guest lecture</h4>
+      <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+      <a href="https://">Read more</a>
+      </div>
+   </div>
+</section>
+<section class="section-3">
+   <h3>Start learning</h3>
+</section>
+
+<footer>
+
+</footer> 
 </body>
 </html>
