--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    <nav class="navbar">
       <img src="resources/images/ic-logo.svg" alt="logo-colmar" class="logo"/>
-      <h1>COLMAR</h1>    
+      <h1>Colmar Academy</h1>    
       <ul>
          <li>On campus</li>
          <li>Online</li>
@@ -58,9 +58,70 @@
 </section>
 <section class="section-3">
    <h3>Start learning</h3>
+   <div class="box-1">
+      <img src="/resources/images/course-software.jpg" alt="">
+      <h4>Software engineering</h4>
+      <p>COURSES</p>
+      <p>Web Development, Mobile Development, iOT, APIs</p>
+   </div>
+   <div class="box-2">
+      <img src="/resources/images/course-computer-art.jpg" alt="">
+      <h4>Computer art</h4>
+      <p>COURSES</p>
+      <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+   </div>
+   <div class="box-3">
+      <img src="/resources/images/course-design.jpg">
+      <h4>Design</h4>
+      <p>COURSES</p>
+      <p>User Experience Design, User Research, Visual Design</p>
+   </div>
+   <div class="box-4">
+      <img src="/resources/images/course-data.jpg">
+      <h4>Data</h4>
+      <p>COURSES</p>
+      <p>Data Science, Big Data, SQL, Data Visualization</p>
+   </div>
+   <div class="box-5">
+      <img src="/resources/images/course-business.jpg" alt="">
+      <h4>Business</h4>
+      <p>COURSES</p>
+      <p>Product Development, Business Development, Startup</p>
+   </div>
+   <div class="Marketing">
+      <img src="/resources/images/course-marketing.jpg" alt="">
+      <h4>Marketing</h4>
+      <p>COURSES</p>
+      <p>Analutics, Content Marketing, Mobile Marketing</p>
+   </div>
+</section>
+<section class="section-4">
+   <h3>Thesis Exibit</h3>
+   <div class="content-left2">
+      <video src="/resources/videos/thesis.mp4">
+      <h4>Reimagine urban</h4>
+      <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, 
+         totam rem aperiam, eaque ipsa quae ab illo inventore.."         
+      </p>
+   </div>
+   <div class="content-right2">
+      <div>
+         <img src="/resources/images/thesis-fisma.jpg" alt="">
+         <h4>Fisma: Design and Prototype</h4>
+         <p>Designer showcase of new prototype product</p>
+      </div>
+      <div>
+         <img src="/resources/images/thesis-now-and-then.jpg">
+         <h4>Now and then</h4>
+         <p>Research study about New York</p>
+      </div>
+   </div>
 </section>
 
 <footer>
+   <p>Copyright Colmar Academy. All rights reserved</p>
+   <p>Terms</p>
+   <p>Privacy</p>
 
 </footer> 
 </body>
